2010-12-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* TODO: Removed 2 old entries about header files that
	are solved meanwhile.

2010-12-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* configure.in: Fix help string for --enable-cmake-release parameter.

	* configure: Regenerated.

2010-12-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL_README: Updated and rephrased a large part of the
	installation instruction, removed outdated information.

2010-12-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_store_user_rules): Removed
	superfluous call to g_mkdir_with_parents (). The "auth" directory
	already exists at this point and this call has been observed to behave
	badly when called in setuid binaries.

2010-12-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Address compiler warnings from gcc 4.4 to ensure openvas-libraries
	compiles without warnings with newer compilers as well.

	* nasl/lsearch.c (lfind): Remove superfluous function which is also
	provided by glibc.

	* nasl/CMakeLists.txt: Add "-fno-strict-aliasing" to CFLAGS to silence
	warnings caused by macros defined in nasl/byteorder.h.

	* misc/share_fd.c (send_fd, recv_fd): Do not use CMSG_DATA macro to
	avoid double casting.

	* misc/ids_send.c (ids_send): Avoid casting between different types of
	sockaddr structs; use a union containing the different types instead.

2010-12-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL_README: Updated prerequisites.

2010-12-01  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump to 4.0+beta3.SVN.

	* VERSION: Set to 4.0.0.beta3.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-12-01  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 4.0+beta2 release.

	* VERSION: Set to 4.0.0.beta2.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.
