@@ -1,3 +1,8 @@
+2010-12-20  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* tools/openvas-macros.cmake: Removed outdated and unused CMake
+	macros.
+
 2010-12-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* TODO: Removed 2 old entries about header files that
